# master-chooser

./: .gitignore  Makefile  README.md  pyproject.toml
master_chooser/: constants.py  main.py
master_chooser/storage/: DEVS.exmaple.yml
tests/: test_chooser.py
